Revert JVM changes